--- a/src/App.scss
+++ b/src/App.scss
@@ -10,9 +10,13 @@
     filter: invert(100%);
   }
 }
+body {
+  font-size: 16px;
+}
 
-.fade-enter-active, .fade-leave-active {
-  transition: opacity .5s;
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.5s;
 }
 .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
   opacity: 0;
