--- a/src/components/partials/Sidebar.scss
+++ b/src/components/partials/Sidebar.scss
@@ -1,6 +1,6 @@
 .sideBarEntry {
   &__body {
-    background-color: rgba(59,59,59,.34);
+    background-color: rgba(59, 59, 59, 0.34);
     border-top: solid 2px #af4a45;
     max-height: 100px;
     padding: 10px 15px;
@@ -19,7 +19,7 @@
 }
 
 .link {
-  color: #000;
+  color: rgba(0, 0, 0, 0.87);
 }
 
 .calendar {
@@ -34,12 +34,18 @@
   &__date {
     margin-right: 15px;
     height: 90px;
-    box-shadow: 0 0 5px 1px rgba(0,0,0,.1);
+    box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.1);
     max-width: 70px;
     border: 5px solid #af4a45;
     text-align: center;
     padding-top: 10px;
-    background: linear-gradient(to bottom,transparent,transparent 50%,#af4a45 50%,#af4a45);
+    background: linear-gradient(
+      to bottom,
+      transparent,
+      transparent 50%,
+      #af4a45 50%,
+      #af4a45
+    );
     span:first-child {
       margin-top: -7px;
       font-size: 1.5rem;
