--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,26 @@
     filter: invert(100%);
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .welcomeLoader {
+    text-align: center;
+    margin: auto 4vw;
+    &__headline {
+      font-size: 1.6rem;
+      font-weight: bold;
+      margin-bottom: 40px;
+    }
+    img {
+      width: 50%;
+    }
+  }
+}
+
+.main-content {
+  align-content: flex-start;
+}
+
 body {
   font-size: 16px;
 }
