--- a/src/components/partials/Sidebar.scss
+++ b/src/components/partials/Sidebar.scss
@@ -11,6 +11,11 @@
       padding: 0;
     }
   }
+
+  > img {
+    max-width: 100%;
+    height: auto;
+  }
 }
 
 .calendar__detail-date {
@@ -20,9 +25,16 @@
 
 .link {
   color: rgba(0, 0, 0, 0.87);
+  font-size: 16px;
+  font-weight: normal;
 }
 
 .calendar {
+  &__headline {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+  }
   &__entry {
     border-bottom: dashed 1px #af4a45;
     padding-bottom: 10px;
